Fixed iPhone customizer spacing

--- a/widgets/src/scss/variables.scss
+++ b/widgets/src/scss/variables.scss
@@ -13,7 +13,7 @@ $filter-panel-toggle-size: 86px;
 $horizontal-wrapper-padding: 18px;
 $sidebar-footer-height: 70px;
 $sidebar-footer-height-mobile: 56px;
-$iphone-action-bar-height: 115px;
+$iphone-action-bar-height: 0px;
 $normal-text-spacing: .025em;
 $font-stack-avalon: Avalon, Poppins, "HelveticaNeue", "Helvetica Neue", sans-serif;
 $font-stack-roboto: Roboto, "HelveticaNeue", "Helvetica Neue", sans-serif;
